--- a/src/components/BtnChar.mxml
+++ b/src/components/BtnChar.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" creationComplete="initComponet(event)">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" creationComplete="initComponet(event)" xmlns:components="components.*">
 	<fx:Script>
 		<![CDATA[
 			import flash.filters.*;
@@ -17,7 +17,7 @@
 				myGlow.blurX = 2
 				myGlow.blurY = 2
 				//myGlow.color = 0xFFFFFF
-				this.testo.filters = [myGlow]
+				//this.testo.filters = [myGlow]
 			}
 			
 			public function get label():String
@@ -45,7 +45,7 @@
 				var myGlow:GlowFilter = new GlowFilter();
 				myGlow.color = 0xFFFFFF
 				
-				this.filters = [myGlow];
+				//this.filters = [myGlow];
 				img.filters = [];
 			}
 			
@@ -55,7 +55,7 @@
 				myBlur.blurX = 2
 				myBlur.blurY = 2
 				myBlur.quality = BitmapFilterQuality.HIGH
-				img.filters = [myBlur];
+				//img.filters = [myBlur];
 				this.filters = [];
 			}
 			
@@ -67,13 +67,21 @@
 				myBlur.blurX = 2
 				myBlur.blurY = 2
 				myBlur.quality = BitmapFilterQuality.HIGH
-				img.filters = [myBlur];
+				//img.filters = [myBlur];
+				this.filters = [];
+			}
+			
+			public function setData(fileName:String):void
+			{
+				charData.readFileIntoByteArray(fileName)
+				
 			}
 			
 		]]>
 	</fx:Script>
 	
-	<s:BitmapImage id="img" width="100%" height="100%" smooth="true" smoothingQuality="high"/>
+	<s:BitmapImage id="img" width="100%" height="100%" smooth="true" smoothingQuality="high" visible="false"/>
 	<s:Label id="testo" left="0" right="0" verticalCenter="0" color="#ffffff" fontFamily="BaseFont"
-			 fontSize="24" textAlign="center"/>
+			 fontSize="24" textAlign="center" visible="false"/>
+	<components:CharData id="charData"/>
 </s:Group>
