--- a/src/CharSelector7.mxml
+++ b/src/CharSelector7.mxml
@@ -25,6 +25,8 @@
 		<![CDATA[
 			import components.ConfigProperties;
 			
+			import data.CharFilesData;
+			
 			import mx.events.FlexEvent;
 			
 			import org.osmf.events.TimeEvent;
@@ -114,24 +116,13 @@
 			
 			protected function selectFile(event:Event):void
 			{
-				// TODO Auto-generated method stub
-				
 				skyPath.text = event.target.nativePath
 				ConfigProperties.setProperty("skyPath", event.target.nativePath)
 				
 				var ini:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/CharSelect.ini");
 				optWindow.writeFileIni(ini)
 				readAndSetI()
-				/* var stream:FileStream = new FileStream();
-				stream.open(ini, FileMode.WRITE);
-				stream.writeUTFBytes(event.target.nativePath);
-				stream.close(); */
-				//bkpfiles()
-				
-				
-				
-				
-				
+			
 			}
 			
 			private function loadFileIni():void
@@ -139,28 +130,15 @@
 				var ini:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/CharSelect.ini");
 				optWindow.addEventListener(Event.COMPLETE, loaderComplete);
 				optWindow.readFileIni(ini)
-				
-				//this.skyPath.text = e.currentTarget.data
-				/* var url:URLRequest = new URLRequest(ini.url);
-				
-				// Define the URLLoader.
-				var loader:URLLoader = new URLLoader();
-				loader.load(url);
-				pathBtn.visible = false
-				// Listen for when the file has finished loading.
-				loader.addEventListener(Event.COMPLETE, loaderComplete); */
+
 				
 			}
 			
 			private function loaderComplete(e:Event):void
 			{
-				// The output of the text file is available via the data property
-				// of URLLoader.
-				
+			
 				modWindow.popolate()
 				addEventListener(FlexEvent.REMOVE, closeModList)
-				/*this.skyPath.width = this.skyPath.widthInChars */
-				/******************		readAndSet() ****************************/
 				readAndSetI()
 			}
 			
@@ -173,7 +151,6 @@
 			
 			protected function minimizeEvent(event:MouseEvent):void
 			{
-				// TODO Auto-generated method stub
 				nativeWindow.minimize()
 			}
 			
@@ -219,18 +196,13 @@
 			{
 				progressAction.removeEventListener("COPY_COMPLETE", bkpComplete)
 				var fromDirectory:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/BKP")
-				var files:Array = fromDirectory.getDirectoryListing()
+				var filesChars:Array =  CharFilesData.directoryToArray(fromDirectory)
 				var charName:Array = new Array()
-				for (var i:uint = 0; i < files.length; i++)
-				{
-					//trace(String(files[i].name).search("Save"))
-					if(String(files[i].name).search("Save")>-1 || String(files[i].name).search("Salva")>-1)
-					{
-						if(charName.indexOf(findName(files[i].name))<0)
-							charName.push(findName(files[i].name))
-					}
-				}
+				for (var i:uint = 0; i < filesChars.length; i++)
+				{	
 				
+					charName.push(filesChars[i].nome)
+				}
 				
 				for(var i:uint = 0; i<charName.length; i++)
 				{
@@ -359,7 +331,7 @@
 			{
 				
 				// TODO Auto-generated method stub
-			
+				
 				start();
 				/* 	var myAppProcessStartupInfo:NativeProcessStartupInfo = new NativeProcessStartupInfo();
 				var myAppProcess = new NativeProcess();
@@ -468,26 +440,26 @@
 			{
 				// TODO Auto-generated method stub
 				trace("click")
-				stage.nativeWindow.width = Capabilities.screenResolutionX
+				/* stage.nativeWindow.width = Capabilities.screenResolutionX
 				stage.nativeWindow.height = Capabilities.screenResolutionY
 				stage.nativeWindow.x = 0
 				stage.nativeWindow.y = 0;
 				bar.removeEventListener(MouseEvent.DOUBLE_CLICK, hgroup1_doubleClickHandler)
 				bar.addEventListener(MouseEvent.DOUBLE_CLICK, hgroup2_doubleClickHandler)
 				bgImg.width = stage.nativeWindow.width
-				bgImg.height = stage.nativeWindow.height
+				bgImg.height = stage.nativeWindow.height */
 			}
 			
 			protected function hgroup2_doubleClickHandler(event:MouseEvent):void
 			{
-				bar.removeEventListener(MouseEvent.DOUBLE_CLICK, hgroup2_doubleClickHandler)
+				/* bar.removeEventListener(MouseEvent.DOUBLE_CLICK, hgroup2_doubleClickHandler)
 				stage.nativeWindow.width = rectNativo.width
 				stage.nativeWindow.height = rectNativo.height
 				stage.nativeWindow.x = rectNativo.x;
 				stage.nativeWindow.y = rectNativo.y;
 				bar.addEventListener(MouseEvent.DOUBLE_CLICK, hgroup1_doubleClickHandler)
 				bgImg.width = stage.nativeWindow.width
-				bgImg.height = stage.nativeWindow.height
+				bgImg.height = stage.nativeWindow.height */
 			}
 			
 		]]>
@@ -532,17 +504,13 @@
 				 color="#FDFCFC" fontFamily="MorrisRomanBlack" verticalAlign="middle" verticalCenter="0" filters="{shadow}"/>
 		
 	</s:VGroup>
-	<s:VGroup height="100%" width="100%">
-		<s:TextArea includeIn="use" borderVisible="false" color="#FDF9F9" width="100%" top="0"
+	<s:TextArea includeIn="use" borderVisible="false" color="#FDF9F9" width="100%" top="0"
 				contentBackgroundAlpha="0.0" contentBackgroundColor="#726B6B" editable="false" selectable="false" fontSize="24"
 				text="select Character:" textAlign="center" verticalAlign="middle" fontFamily="BaseFont" filters="{shadow}" />
-		<components:CharSlider id="chars" includeIn="use" width="100%" />
-		<s:Label id="labelText" fontSize="16" textAlign="center" visible="true" includeIn="use" filters="{shadow}"
-				 color="#FDFCFC" fontFamily="BaseFont" bottom="140"
-				 horizontalCenter="0" 
-				 verticalAlign="middle"/>
+	<s:VGroup left="0"
+			  right="0" top="200" horizontalAlign="center">
+		<components:CharSlider id="chars" includeIn="use" width="980" />
 	</s:VGroup>
-	
 	<s:HGroup bottom="10" horizontalCenter="0" id="pathTool"
 			  verticalAlign.use="contentJustify" visible.splash="false">
 		<s:TextArea id="skyPath" width="400" height="20" borderVisible="false" color="#FDF9F9" visible.use="false"
@@ -552,7 +520,10 @@
 		<s:Button id="pathBtn" label="Select Path" visible.use="false"
 				  click="chooseSkyrimPath(event)"/>
 	</s:HGroup>
-	
+	<s:Label id="labelText" fontSize="16" textAlign="center" visible="true" includeIn="use" filters="{shadow}"
+			 color="#FDFCFC" fontFamily="BaseFont" bottom="140"
+			 horizontalCenter="0" 
+			 verticalAlign="middle"/>
 	<components:StartButton includeIn="use" bottom="30" width="100" height="100" label="start" id="startSkyrim" 
 							click="button1_clickHandler(event)"
 							horizontalCenter="0" filters="{shadow}"/>
@@ -571,5 +542,5 @@
 					contentBackgroundColor="#726B6B" fontWeight="bold"
 					textAlign="center" verticalAlign="middle" selectable="false" useHandCursor="false" buttonMode="true" editable="false"/>
 	</s:HGroup>
-<s:Label bottom="2" right="2" text="v 1.06" fontSize="12" color="#726B6B" />
+	<s:Label bottom="2" right="2" text="v 1.06" fontSize="12" color="#726B6B" />
 </s:WindowedApplication>
