--- a/src/CharSelector7.mxml
+++ b/src/CharSelector7.mxml
@@ -23,9 +23,7 @@
 	</fx:Style>
 	<fx:Script>
 		<![CDATA[
-			import components.ConfigProperties;
-			
-			import data.CharFilesData;
+			import data.ConfigProperties;
 			
 			import mx.events.FlexEvent;
 			
@@ -116,13 +114,24 @@
 			
 			protected function selectFile(event:Event):void
 			{
+				// TODO Auto-generated method stub
+				
 				skyPath.text = event.target.nativePath
 				ConfigProperties.setProperty("skyPath", event.target.nativePath)
 				
 				var ini:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/CharSelect.ini");
 				optWindow.writeFileIni(ini)
 				readAndSetI()
-			
+				/* var stream:FileStream = new FileStream();
+				stream.open(ini, FileMode.WRITE);
+				stream.writeUTFBytes(event.target.nativePath);
+				stream.close(); */
+				//bkpfiles()
+				
+				
+				
+				
+				
 			}
 			
 			private function loadFileIni():void
@@ -130,15 +139,28 @@
 				var ini:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/CharSelect.ini");
 				optWindow.addEventListener(Event.COMPLETE, loaderComplete);
 				optWindow.readFileIni(ini)
-
+				
+				//this.skyPath.text = e.currentTarget.data
+				/* var url:URLRequest = new URLRequest(ini.url);
+				
+				// Define the URLLoader.
+				var loader:URLLoader = new URLLoader();
+				loader.load(url);
+				pathBtn.visible = false
+				// Listen for when the file has finished loading.
+				loader.addEventListener(Event.COMPLETE, loaderComplete); */
 				
 			}
 			
 			private function loaderComplete(e:Event):void
 			{
-			
+				// The output of the text file is available via the data property
+				// of URLLoader.
+				
 				modWindow.popolate()
 				addEventListener(FlexEvent.REMOVE, closeModList)
+				/*this.skyPath.width = this.skyPath.widthInChars */
+				/******************		readAndSet() ****************************/
 				readAndSetI()
 			}
 			
@@ -151,6 +173,7 @@
 			
 			protected function minimizeEvent(event:MouseEvent):void
 			{
+				// TODO Auto-generated method stub
 				nativeWindow.minimize()
 			}
 			
@@ -196,13 +219,18 @@
 			{
 				progressAction.removeEventListener("COPY_COMPLETE", bkpComplete)
 				var fromDirectory:File = new File(ConfigProperties.getProperty(ConfigProperties.SAVEPATH)+"/BKP")
-				var filesChars:Array =  CharFilesData.directoryToArray(fromDirectory)
+				var files:Array = fromDirectory.getDirectoryListing()
 				var charName:Array = new Array()
-				for (var i:uint = 0; i < filesChars.length; i++)
-				{	
-				
-					charName.push(filesChars[i].nome)
+				for (var i:uint = 0; i < files.length; i++)
+				{
+					//trace(String(files[i].name).search("Save"))
+					if(String(files[i].name).search("Save")>-1 || String(files[i].name).search("Salva")>-1)
+					{
+						if(charName.indexOf(findName(files[i].name))<0)
+							charName.push(findName(files[i].name))
+					}
 				}
+				
 				
 				for(var i:uint = 0; i<charName.length; i++)
 				{
@@ -246,11 +274,12 @@
 						var firstFileArr:Array = new Array();
 						for(var z:uint = 0; z<firstFileArrTemp.length; z++)
 						{
+							
 							if(firstFileArrTemp[z].extension == "ess")
 								firstFileArr.push(firstFileArrTemp[z])
 						}
 						
-						
+						/* 
 						firstFile = firstFileArr[0]
 						for(var z:uint = 0; z<firstFileArr.length; z++)
 						{
@@ -258,7 +287,7 @@
 								firstFile = firstFileArr[z]
 						}
 						tmpBtn.setData(firstFile.nativePath)
-						this.chars.addChar(tmpBtn)
+						this.chars.addChar(tmpBtn) */
 						
 					}
 				}
@@ -440,26 +469,26 @@
 			{
 				// TODO Auto-generated method stub
 				trace("click")
-				/* stage.nativeWindow.width = Capabilities.screenResolutionX
+				stage.nativeWindow.width = Capabilities.screenResolutionX
 				stage.nativeWindow.height = Capabilities.screenResolutionY
 				stage.nativeWindow.x = 0
 				stage.nativeWindow.y = 0;
 				bar.removeEventListener(MouseEvent.DOUBLE_CLICK, hgroup1_doubleClickHandler)
 				bar.addEventListener(MouseEvent.DOUBLE_CLICK, hgroup2_doubleClickHandler)
 				bgImg.width = stage.nativeWindow.width
-				bgImg.height = stage.nativeWindow.height */
+				bgImg.height = stage.nativeWindow.height
 			}
 			
 			protected function hgroup2_doubleClickHandler(event:MouseEvent):void
 			{
-				/* bar.removeEventListener(MouseEvent.DOUBLE_CLICK, hgroup2_doubleClickHandler)
+				bar.removeEventListener(MouseEvent.DOUBLE_CLICK, hgroup2_doubleClickHandler)
 				stage.nativeWindow.width = rectNativo.width
 				stage.nativeWindow.height = rectNativo.height
 				stage.nativeWindow.x = rectNativo.x;
 				stage.nativeWindow.y = rectNativo.y;
 				bar.addEventListener(MouseEvent.DOUBLE_CLICK, hgroup1_doubleClickHandler)
 				bgImg.width = stage.nativeWindow.width
-				bgImg.height = stage.nativeWindow.height */
+				bgImg.height = stage.nativeWindow.height
 			}
 			
 		]]>
@@ -485,14 +514,14 @@
 		</s:Transition> 
 	</s:transitions>
 	
-	<s:BitmapImage id="bgImg" scaleMode="stretch" left="0" right="0" top="0" bottom="0" source="{'file://'+File.applicationDirectory.nativePath+'/assets/background3.jpg'}" 
+	<s:BitmapImage visible="false" id="bgImg" scaleMode="stretch" left="0" right="0" top="0" bottom="0" source="{'file://'+File.applicationDirectory.nativePath+'/assets/background3.jpg'}" 
 				   complete="resizeImg(event)" ioError="{trace(File.applicationDirectory.nativePath+'/assets/background1.jpg')}" includeInLayout="false" includeInLayout.splash="true"/>
 	
-	<s:BitmapImage id="splashScreen"  scaleMode="zoom" left="0" right="0" top="0" bottom="0" includeIn="splash"  horizontalCenter="0" source="{'file://'+File.applicationDirectory.nativePath+'/assets/background.jpg'}" 
+	<s:BitmapImage visible="false" id="splashScreen"  scaleMode="zoom" left="0" right="0" top="0" bottom="0" includeIn="splash"  horizontalCenter="0" source="{'file://'+File.applicationDirectory.nativePath+'/assets/background.jpg'}" 
 				   complete="bgImg_completeHandler(event)" ioError="{trace(File.applicationDirectory.nativePath+'/assets/background1.jpg')}"/>
 	<s:VGroup verticalCenter="0" horizontalCenter="0" horizontalAlign="center" id="titleSkyrim"
 			  width="100%">
-		<s:Label id="skyrimTitle" fontSize="65" text="skyrim" textAlign="center" includeIn="splash" includeInLayout="false" includeInLayout.splash="true"
+		<s:Label id="skyrimTitle" fontSize="65" text="" textAlign="center" includeIn="splash" includeInLayout="false" includeInLayout.splash="true"
 				 color="#FDFCFC" fontFamily="BaseFont" verticalAlign="middle" verticalCenter="0" filters="{shadow}"/>
 		<s:Line id="linea" xFrom="{skyrimTitle.x}" xTo="{skyrimTitle.width}" yFrom="0" yTo="0" includeIn="splash" includeInLayout="false" includeInLayout.splash="true" filters="{shadow}">
 			<!-- Define the border color of the line. -->
@@ -504,13 +533,17 @@
 				 color="#FDFCFC" fontFamily="MorrisRomanBlack" verticalAlign="middle" verticalCenter="0" filters="{shadow}"/>
 		
 	</s:VGroup>
-	<s:TextArea includeIn="use" borderVisible="false" color="#FDF9F9" width="100%" top="0"
-				contentBackgroundAlpha="0.0" contentBackgroundColor="#726B6B" editable="false" selectable="false" fontSize="24"
-				text="select Character:" textAlign="center" verticalAlign="middle" fontFamily="BaseFont" filters="{shadow}" />
-	<s:VGroup left="0"
-			  right="0" top="200" horizontalAlign="center">
-		<components:CharSlider id="chars" includeIn="use" width="980" />
+	<s:VGroup height="100%" width="100%">
+		<s:TextArea includeIn="use" borderVisible="false" color="#FDF9F9" width="100%" top="0"
+					contentBackgroundAlpha="0.0" contentBackgroundColor="#726B6B" editable="false" selectable="false" fontSize="24"
+					text="select Character:" textAlign="center" verticalAlign="middle" fontFamily="BaseFont" filters="{shadow}" />
+		<components:CharSlider id="chars" includeIn="use" width="100%" />
+		<s:Label id="labelText" fontSize="16" textAlign="center" visible="true" includeIn="use" filters="{shadow}"
+				 color="#FDFCFC" fontFamily="BaseFont" bottom="140"
+				 horizontalCenter="0" 
+				 verticalAlign="middle"/>
 	</s:VGroup>
+	
 	<s:HGroup bottom="10" horizontalCenter="0" id="pathTool"
 			  verticalAlign.use="contentJustify" visible.splash="false">
 		<s:TextArea id="skyPath" width="400" height="20" borderVisible="false" color="#FDF9F9" visible.use="false"
@@ -520,11 +553,8 @@
 		<s:Button id="pathBtn" label="Select Path" visible.use="false"
 				  click="chooseSkyrimPath(event)"/>
 	</s:HGroup>
-	<s:Label id="labelText" fontSize="16" textAlign="center" visible="true" includeIn="use" filters="{shadow}"
-			 color="#FDFCFC" fontFamily="BaseFont" bottom="140"
-			 horizontalCenter="0" 
-			 verticalAlign="middle"/>
-	<components:StartButton includeIn="use" bottom="30" width="100" height="100" label="start" id="startSkyrim" 
+	
+	<components:StartButton visible="false" includeIn="use" bottom="30" width="100" height="100" label="start" id="startSkyrim" 
 							click="button1_clickHandler(event)"
 							horizontalCenter="0" filters="{shadow}"/>
 	<s:Label id="infoloading" filters="{shadow}" fontSize="24" textAlign="center" color="#ffffff" fontFamily="BaseFont" horizontalCenter="0" verticalCenter="0" text="select skyrim application folder - click on button" includeIn="config"/>
