--- a/src/components/BtnChar.mxml
+++ b/src/components/BtnChar.mxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" creationComplete="initComponet(event)" xmlns:components="components.*">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300" creationComplete="initComponet(event)" xmlns:components="components.*" xmlns:w8ui="components.w8ui.*">
 	<fx:Script>
 		<![CDATA[
+			import data.CharData;
+			
 			import flash.filters.*;
 			
 			import mx.events.FlexEvent; 
@@ -73,7 +75,9 @@
 			
 			public function setData(fileName:String):void
 			{
-				charData.readFileIntoByteArray(fileName)
+				var newFile:File = new File(fileName)
+				var charData:CharData = new CharData(newFile)
+				charUi.setData(charData)
 				
 			}
 			
@@ -83,5 +87,5 @@
 	<s:BitmapImage id="img" width="100%" height="100%" smooth="true" smoothingQuality="high" visible="false"/>
 	<s:Label id="testo" left="0" right="0" verticalCenter="0" color="#ffffff" fontFamily="BaseFont"
 			 fontSize="24" textAlign="center" visible="false"/>
-	<components:CharData id="charData"/>
+	<w8ui:CharUI id="charUi"/>
 </s:Group>
