--- a/src/components/ConfigView.mxml
+++ b/src/components/ConfigView.mxml
@@ -5,6 +5,9 @@
 		 width="400" height="600" >
 	<fx:Script>
 		<![CDATA[
+			import data.PropertiesParser;
+			import data.Properties;
+			import data.ConfigProperties;
 			import mx.collections.ArrayCollection;
 			import mx.events.FlexEvent;
 			
