--- a/src/components/ModsList.mxml
+++ b/src/components/ModsList.mxml
@@ -4,6 +4,7 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="600" >
 	<fx:Script>
 		<![CDATA[
+			import data.ConfigProperties;
 			import mx.collections.ArrayCollection;
 			
 			import org.as3commons.lang.StringUtils;
